@@ -591,9 +591,6 @@ insert_phi_nodes_for (tree var, bitmap phi_insertion_points)
 	  FOR_EACH_EDGE (e, ei, bb->preds)
 	    add_phi_arg (phi, var, e);
 	}
-
-      /* Mark this PHI node as interesting for the rename process.  */
-      REWRITE_THIS_STMT (phi) = 1;
     }
 }
 
@@ -745,8 +742,7 @@ rewrite_initialize_block (struct dom_walk_data *walk_data ATTRIBUTE_UNUSED,
   for (phi = phi_nodes (bb); phi; phi = PHI_CHAIN (phi))
     {
       tree result = PHI_RESULT (phi);
-      if (REWRITE_THIS_STMT (phi))
-	register_new_def (result, &block_defs_stack);
+      register_new_def (result, &block_defs_stack);
     }
 }
 
